--- a/fourcapital1-war/web/adeudoJSF.xhtml
+++ b/fourcapital1-war/web/adeudoJSF.xhtml
@@ -6,10 +6,11 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>FOUR CAPITAL</title>
-        <script language="JavaScript">
-            javascript:window.history.forward(1);
-        </script>
+        <link rel="shortcut icon" href="resources/imagenes/logo.ico"></link>
+        <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
+        
         <h:outputStylesheet library="css" name="style.css"/>
+        <script src="resources/js/mobile.js" type="text/javascript"></script>
     </h:head>
     <h:body >
 
