--- a/fourcapital1-war/web/noAdeudoJSF.xhtml
+++ b/fourcapital1-war/web/noAdeudoJSF.xhtml
@@ -5,7 +5,11 @@
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>FOUR CAPITAL</title>
+        <link rel="shortcut icon" href="resources/imagenes/logo.ico"></link>
+        <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
+        
         <h:outputStylesheet library="css" name="style.css"/>
+        <script src="resources/js/mobile.js" type="text/javascript"></script>
     </h:head>
     <h:body>
         <br /> <br /> <br /> <br /> 
